# MEPP

./: .travis.yml  .travis_old.yml  CMakeLists.txt  README  appveyor.yml  doxy.config.in  readme_FR_Component.txt  readme_FR_Demarrage_Rapide.txt  readme_FR_Dialog_Box.txt  readme_FR_Linux.txt  readme_FR_Mac_OS_X.txt  readme_FR_VMware.txt  readme_FR_Windows.txt  readme_FR_Windows_VS2008.txt  readme_FR_Windows_VS2008_x64.txt  readme_FR_Windows_VS2010.txt  readme_FR_Windows_VS2010_x64.txt  readme_FR_Windows_x64.txt
cmake/: FindASSIMP.cmake  FindFFmpeg.cmake  FindGLEW.cmake  FindIqa.cmake  FindJpeg.cmake  FindOpenMesh.cmake  FindQGLViewer.cmake  FindXercesC.cmake  TargetDoc.cmake
cmake/modules/: FindFFmpeg.cmake  FindGLEW.cmake  FindXercesC.cmake  TargetDoc.cmake
cmake/msvc/: kit.cmake  kit_vs2010-64_v01.cmake  kit_vs2012-64_v07.cmake  kit_vs2015-64_v01-AppVeyor.cmake  kit_vs2015-64_v01.cmake
doc/: readme_EN_Linux.txt  readme_EN_Mac_OS_X.txt  readme_EN_VMware.txt  readme_EN_Windows_VS2008.txt  readme_EN_Windows_VS2008_x64.txt  readme_EN_Windows_VS2010.txt  readme_EN_Windows_VS2010_x64.txt  readme_FR_Linux.txt  readme_FR_Mac_OS_X.txt  readme_FR_VMware.txt  readme_FR_Windows_VS2008.txt  readme_FR_Windows_VS2008_x64.txt  readme_FR_Windows_VS2010.txt  readme_FR_Windows_VS2010_x64.txt  readme__NEW__Windows_VS2015_x64.txt
doc/git/: readme.txt
doc/old_svn/: readme_FR_Demarrage_Rapide.txt  readme_FR_Mac_OS_X.txt  readme_FR_Windows_VS2008.txt  readme_FR_Windows_VS2010.txt
doc/tutorials/: readme.txt
scripts/: cat.sh  gnu_cat.bat
src/components/Analysis/Curvature/: CMakeLists.txt
src/components/Analysis/Curvature/src/: Curvature_Component.cpp  Curvature_Component.h  Curvature_Items.h  Curvature_Polyhedron.h  dialSettings.cpp  dialSettings.hxx  dialSettings.ui  extract_Vpropres.cpp  extract_Vpropres.h  mepp_component_Curvature_plugin.cpp  mepp_component_Curvature_plugin.hxx
src/components/Compression/Compression_Valence/: CMakeLists.txt
src/components/Compression/Compression_Valence/src/: Compression_Valence_Basemesh_builder.h  Compression_Valence_Common.h  Compression_Valence_Component.cpp  Compression_Valence_Component.h  Compression_Valence_Items.h  Compression_Valence_Polyhedron.h  Matrix3X3.h  Processing_Kai.cpp  Processing_Kai.h  arithmetic_codec.cpp  arithmetic_codec.h  dialSettingsComp.cpp  dialSettingsComp.hxx  dialSettingsComp.ui  dialSettingsDecomp.cpp  dialSettingsDecomp.hxx  dialSettingsJCW.cpp  dialSettingsJCW.hxx  dialSettingsJCW.ui  mepp_component_Compression_Valence_plugin.cpp  mepp_component_Compression_Valence_plugin.hxx
src/components/Compression/Compression_Valence/src/Color_Distance/: BoundingBox.h  ColorMesh.cpp  ColorMesh.h  Deviation.cxx  Deviation.h  Neighborhood.cxx  Neighborhood.h  Plane.h  PlaneMesh.cxx  PlaneMesh.h  Sample.cxx  Sample.h  Stopwatch.h  UniformGrid.cxx  UniformGrid.h  VectorT.h
src/components/Compression/Compression_Valence_Web/: doxy.config.in
src/components/Distance/MSDM/: CMakeLists.txt  doxy.config.in
src/components/Distance/MSDM2/: CMakeLists.txt  doxy.config.in  readme_EN_IMPORTANT.txt  readme_FR_IMPORTANT.txt
src/components/Examples/CGAL_Example/: CMakeLists.txt
src/components/Examples/CGAL_Example/cmake/: use_components.txt
src/components/Examples/CGAL_Example/src/: CGAL_Example_Component.cpp  CGAL_Example_Component.h  CGAL_Example_Items.h  CGAL_Example_Polyhedron.h  dialSettings.cpp  dialSettings.hxx  dialSettings.ui  dialSettings_CGAL_Example.cpp  dialSettings_CGAL_Example.hxx  dialSettings_CGAL_Example.ui  mepp_component_CGAL_Example_plugin.cpp  mepp_component_CGAL_Example_plugin.hxx
src/components/Examples/CGAL_Example/src/mutable_priority_queue/: mutable_priority_queue.h  priority_queue_example.cpp
src/components/Examples/CGAL_Example/src/point_tools/: Point_reading_generation_saving.h
src/components/Examples/CGAL_Example/src/polyhedron_tools/: Polyhedron_coloring.h  Polyhedron_local_computation.h  Polyhedron_statistics.h
src/components/Examples/CGAL_Example/src/triangle_manager/: CGAL_includes_and_types.h  Index_set.cpp  Index_set.h  Triangle.h  Triangle_set_manager.cpp  Triangle_set_manager.h  Unique_segment.h
src/components/Examples/CGAL_Example/src/triangle_tools/: Triangle_reading_generation_saving.h  Triangle_shape_analysis.h
src/components/Examples/CGAL_Example/src/useful_methods/: General_purpose.h  Histogram.h  Math_methods.h  Training_and_testing_data_SVM.h  extract_Vpropres.cpp  extract_Vpropres.h
src/components/Remeshing/Canonical/: doxy.config.in
src/components/Segmentation/VSA/: CMakeLists.txt
src/components/_enrichment_.in/: polyhedron_enrichment_facet.h.in  polyhedron_enrichment_include.h.in  polyhedron_enrichment_vertex.h.in
src/mepp/: main.cpp  mainwindow.cpp  mainwindow.hxx  mainwindow.ui  material.h  mdiarea.cpp  mdiarea.hxx  mepp.qrc  mepp_action.hxx  mepp_component.h  mepp_component_plugin_interface.h  mepp_config.h  mepp_config.h.in  scene.cpp  scene.h  viewer.cpp  viewer.hxx
src/mepp/Polyhedron/: Correct_CGAL_Structure.h  Polyhedron_ASSIMP_CGALImporter.h  Polyhedron_Builder.h  Polyhedron_Copy.h  Polyhedron_OBJ_CGALImporter.h  Polyhedron_OFF_CGALImporter.h  Polyhedron_PLY_CGALImporter.h  Polyhedron_SMF_CGALImporter.h  Polyhedron_X3D_CGALImporter.h  X3D_IFS_old.h  X3D_old.cpp  X3D_old.h  mesh.cpp  mesh.h  ply.cpp  ply.h  polyhedron.h  polyhedron_enriched_polyhedron.h  polyhedron_enrichment_define.h  polyhedron_enrichment_facet.h  polyhedron_enrichment_halfedge.h  polyhedron_enrichment_include.h  polyhedron_enrichment_polyhedron.h  polyhedron_enrichment_vertex.h  polyhedron_shared_items.h  rply.c
src/mepp/QTFFmpegWrapper/: QVideoDecoder.cpp  QVideoDecoder.h  QVideoEncoder.cpp  QVideoEncoder.h  ffmpeg.h
src/mepp/Tools/: Tools_Polyhedron.h  Tools_Polyhedron_decorator.h  Tools_Polyhedron_memory_builder.h  Tools_Polyhedron_subdivision.h  Tools_Polyhedron_subdivision_rules.h  Tools_quad-triangle.h  Tools_sqrt3.h
src/mepp/_enrichment_.in/: polyhedron_enrichment_define.h.in  polyhedron_enrichment_halfedge.h.in  polyhedron_enrichment_polyhedron.h.in
(+110 files in other folders)
